# AI_Mumbai_Hack

./: .gitignore  .gitlab-ci.yml  .mcp.json  .npmrc  LICENSE  README.md  components.json  drizzle.config.ts  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  project.toml  tsconfig.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
backend/: .gitignore  DEPLOY_TO_CLOUD_RUN.md  Dockerfile  FIX_CLOUD_RUN_429.md  FIX_SERVICE_ACCOUNT.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  __init__.py  api_server.py  check_logs.sh  check_recent_logs.sh  deploy_cloud_run.sh  deploy_wrapper.py  main_local_test.py  pyproject.toml  requirements.txt  setup.py  sitecustomize.py
backend/src/: __init__.py  config.py
backend/src/agents/: __init__.py  education_agent.py  experience_agent.py  extractor_agent.py  meta_agent.py  orchestrator_agent.py  projects_agent.py  resume_extractor.py  skills_agent.py  summary_agent.py
backend/src/deploy/: __init__.py  agent_engine_deploy.py  bootstrap.py
backend/src/graph/: __init__.py  optimization_orchestrator.py  orchestrator.py
backend/src/models/: __init__.py  schemas.py
backend/src/utils/: __init__.py  logging_utils.py  retry_utils.py  schema_utils.py  text_utils.py
components/: command-select.tsx  data-pagination.tsx  data-table.tsx  dictaphone.tsx  empty-state.tsx  error-state.tsx  generated-avatar.tsx  loading-state.tsx  responsive-dialog.tsx
configs/: BaseEnvironment.ts  ai-models.ts  db.ts  supabase.ts
constant/: colors.ts
context/: resume-info-provider.tsx
db/: index.ts
(+265 files in other folders)
