[project]
name = "resume-matcher-langgraph"
version = "0.1.0"
description = "Multi-agent resume-JD matching system using LangGraph and Vertex AI Agent Engine"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform[agent_engines]>=1.60.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

